--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <ul>
     <audio id="audio" src="boop.wav"></audio>
     <li><a href="projects.html">Projects</a></li>
-    <li>Socials</li>
+    <li><a href="socials.html"> Socials</a></li>
     <li onclick="play()">Exit</li>
 </ul>
 </div>
