--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<meta content="FloatingBeans" property="og:title" />
+<meta content="just a basic personal website i made, not the best but it gets the job done" property="og:description" />
+<meta content="https://floatingbeans.github.io" property="og:url" />
+<meta content="https://i.imgflip.com/82w9j7.jpg" property="og:image" />
+<meta content="#014012" data-react-helmet="true" name="theme-color" />
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>FloatingBeans</title>
 
