--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
 .box {
   width: 40%;
   margin: 0 auto;
-  background: rgba(255,255,255,0.2);
+  background: rgb(0, 0, 0);
   padding: 35px;
   border: 2px solid #000000;
   border-radius: 20px/50px;
@@ -71,7 +71,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgb(0, 0, 0);
   transition: opacity 500ms;
   visibility: hidden;
   opacity: 0;
