--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <meta content="FloatingBeans" property="og:title" />
-<meta content="just a basic personal website i made, not the best but it gets the job done" property="og:description" />
+<meta content="im a can of beans floating!!!!!" property="og:description" />
 <meta content="https://floatingbeans.github.io" property="og:url" />
 <meta content="https://i.imgflip.com/82w9j7.jpg" property="og:image" />
 <meta content="#014012" data-react-helmet="true" name="theme-color" />
