--- a/moosic.html
+++ b/moosic.html
@@ -2,3 +2,11 @@
     <source src="theme.mp3" type="audio/mp3">
     Your browser does not support the audio element.
 </audio>
+<body onclick="pplay()">
+    <script>
+        function pplay() {
+          var audio = new Audio('bruh.mp3');
+            audio.play()
+          }
+        </script>
+</body>
