--- a/projects.html
+++ b/projects.html
@@ -1,37 +1,43 @@
-
 <h1>My Projects</h1>
 <ul>
-  <li><a href="#popup1">Toxic Waste</a></li>
+  <li><a href="#popup1">Encryption Algorithm</a></li>
   
-
+  <body onclick="pplay()">
+    <script>
+        function pplay() {
+          var audio = new Audio('bruh.mp3');
+            audio.play()
+          }
+        </script>
+</body>
 	
 
 
 <div id="popup1" class="overlay">
 	<div class="popup">
-		<h2>Tormater 2: Toxic Waste</h2>
+		<h2>The BEANS Encryption Algorithm</h2>
 		<a class="close" href="#">&times;</a>
 		<div class="content">
-			Tormater 2: Toxic Waste is an expansion pack for Tormater™️ 2. It adds new enemies, weapons and maps to the original tormater 2.
+			It's an Encryption algorithm, pretty simple
       <br> <br>
-      <a href="" style="color: gray; cursor:not-allowed;">Download (None)</a>
+      <a href="https://floatingbeans.github.io/encoded/" style="color: rgb(0, 183, 255); ">Visit</a>
 		</div>
 	</div>
 </div>
 <li><a href="#popup1"></a></li>
   
-<li><a href="#popup2">Tormater Forum: Hindi</a></li>
+<li><a href="#popup2">[CANNOT LOAD NAME]</a></li>
 	
 
 
 <div id="popup2" class="overlay">
 	<div class="popup">
-		<h2>Tormater Forum: Hindi</h2>
+		<h2>[CANNOT LOAD CONTENT]</h2>
 		<a class="close" href="#">&times;</a>
 		<div class="content">
-			Tormater Forum (forum.tormater.com), is an online interent for the Tormater community. The forum has many translations of it available to be used on the site. This is the hindi version of Tormater Forum.
+			[CANNOT LOAD DESCRIPTION]
       <br> <br>
-      <a href="" style="color: gray; cursor:not-allowed;">Coming Soon</a>
+      <a href="" style="color: gray; cursor:not-allowed;">[CANNOT FIND ACCESS]</a>
 		</div>
 	</div>
 </div>
