--- a/socials.html
+++ b/socials.html
@@ -13,5 +13,13 @@
     <li><a href="https://github.com/floatingbeans"><i class="fab fa-github"></i> Github</a></li>
     <li><a href="https://steamcommunity.com/profiles/76561199336961446/"><i class="fab fa-steam"></i> Steam</a></li>
     <li><a href="https://www.xbox.com/en-IN/play/user/Beans6650"><i class="fab fa-xbox"></i> Xbox</a></li>
+    <li><a href="https://www.instagram.com/afloatingbean/"><i class="fab fa-instagram"></i> Instagram</a></li>
     
-</ul>
+</ul><body onclick="pplay()">
+    <script>
+        function pplay() {
+          var audio = new Audio('bruh.mp3');
+            audio.play()
+          }
+        </script>
+</body>
