--- a/socials.html
+++ b/socials.html
@@ -21,5 +21,11 @@
           var audio = new Audio('bruh.mp3');
             audio.play()
           }
+         function play3() {
+        var audio4 = new Audio('button3.wav')
+        audio4.play();
+        
+      }
+  
         </script>
 </body>
