--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <title>FloatingBeans</title>
 
 <body id="custom" onclick="pplay()">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <div class="moving">
 <img src="logo.png" class="behind">
