--- a/projects.html
+++ b/projects.html
@@ -60,15 +60,15 @@
 .button {
 
   padding: 10px;
-  color: #00fb1d;
-  border: 2px solid #06D85F;
+  color: orange;
+  border: 2px solid orange;
   border-radius: 20px/50px;
   text-decoration: none;
   cursor: pointer;
   transition: all 0.3s ease-out;
 }
 .button:hover {
-  background: #1aff00;
+  background: orange;
 }
 
 .overlay {
@@ -106,7 +106,7 @@
   font-size: 30px;
   font-weight: bold;
   text-decoration: none;
-  color: #00ff00;
+  color: orange;
 }
 
 </style>
