made small changes

--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,7 @@
-<h1>My Projects</h1>
-<ul>
-  <li><a href="#popup1">Encryption Algorithm</a></li>
+
+  <h1>My Projects</h1>
+
+  <a href="#popup1">Encryption Algorithm</a> <br>
   
   <body onclick="pplay()">
     <script>
@@ -10,6 +11,7 @@
           }
         </script>
 </body>
+
 	
 
 
@@ -24,10 +26,12 @@
 		</div>
 	</div>
 </div>
-<li><a href="#popup1"></a></li>
+<a href="#popup1"></a>
   
-<li><a href="#popup2">[CANNOT LOAD NAME]</a></li>
+<a href="#popup2">[CANNOT LOAD NAME]</a> <br>
 	
+
+
 
 
 <div id="popup2" class="overlay">
@@ -41,7 +45,6 @@
 		</div>
 	</div>
 </div>
-</ul>
 
 <style>
   
@@ -78,7 +81,7 @@
   left: 0;
   right: 0;
   background: rgb(0, 0, 0);
-  transition: opacity 500ms;
+ 
   visibility: hidden;
   opacity: 0;
 }
@@ -111,4 +114,4 @@
 
 </style>
 
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="window.css" />
