--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <meta content="FloatingBeans" property="og:title" />
-<meta content="im a can of beans floating!!!!!" property="og:description" />
+<meta content="eating crowbars and dying" property="og:description" />
 <meta content="https://floatingbeans.github.io" property="og:url" />
 <meta content="https://i.imgflip.com/82w9j7.jpg" property="og:image" />
 <meta content="#014012" data-react-helmet="true" name="theme-color" />
@@ -17,8 +17,9 @@
 <BR><BR>
 <ul>
   
-    <li ><a  href="" onmousedown="hover()" onclick="window.open(`projects.html`, 'mywindow','menubar=1,resizable=1,width=1280,height=480')">Projects</a></li>
-    <li ><a href="" onmousedown="hover()" onclick="window.open(`socials.html`, 'mywindow','menubar=1,resizable=1,width=640,height=680')"> Socials</a></li>
+    <li ><a  href="" onmousedown="hover()" onclick="window.open(`projects.html`, 'mywindow','menubar=0,resizable=1,width=1280,height=480')">Projects</a></li>
+    <li ><a href="" onmousedown="hover()" onclick="window.open(`socials.html`, 'mywindow','menubar=0,resizable=1,width=640,height=680')"> Socials</a></li>
+    <li ><a href="" onmousedown="hover()" onclick="window.open(`share.html`, 'mywindow','menubar=0,resizable=0,width=640,height=680')"> Share!</a></li>
     <li  onmousedown="hover()" id="ext" class="exit"><a onclick="play()">Quit</a></li>
 </ul>
 </div>
