--- a/socials.html
+++ b/socials.html
@@ -1,5 +1,5 @@
 <link href="css/all.css">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="window.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
 <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
@@ -8,7 +8,7 @@
 
 <ul>
 
-
+  <title>Console</title>
     <li><a href="https://youtube.com/@floatingbeans"><i class="fab fa-youtube"></i> YouTube</a></li>
     <li><a href="https://github.com/floatingbeans"><i class="fab fa-github"></i> Github</a></li>
     <li><a href="https://steamcommunity.com/profiles/76561199336961446/"><i class="fab fa-steam"></i> Steam</a></li>
