--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <div class="moving">
-<img src="logo.png" class="behind">
-<img src="logo.png" onclick="toggle()" class="radio">
+<h1 class="behind">F L O A T I N G - B E A N S</h1>
+<h1 onclick="toggle()" class="radio">F L O A T I N G - B E A N S </h1>
 </div>
-<BR><BR>
+
 <ul>
   
-    <li ><a  href="" onmousedown="hover()" onclick="window.open(`projects.html`, 'mywindow','menubar=0,resizable=1,width=1280,height=480')">Projects</a></li>
-    <li ><a href="" onmousedown="hover()" onclick="window.open(`socials.html`, 'mywindow','menubar=0,resizable=1,width=640,height=680')"> Socials</a></li>
-    <li ><a href="" onmousedown="hover()" onclick="window.open(`share.html`, 'mywindow','menubar=0,resizable=0,width=640,height=680')"> Share!</a></li>
-    <li  onmousedown="hover()" id="ext" class="exit"><a onclick="play()">Quit</a></li>
+    <li class="flex"><a  href="projects.html" onmousedown="hover()">Projects  </a> <p class="des">Check out some things that I made.</p> </li> 
+    <li class="flex"><a href="socials.html" onmousedown="hover()"> Socials  </a> <p class="des">Every social media I'm on.</p></li>
+    <li class="flex"><a href="" onmousedown="hover()" onclick="window.open(`share.html`, 'mywindow','menubar=0,resizable=0,width=640,height=680')"> Share!  </a><p class="des">Share my website.</p></li>
+    <li class="flex" onmousedown="hover()" id="ext" class="exit"><a onclick="play()">Quit</a><p class="des">Leave</p></li>
 </ul>
 </div>
 <img src="Crowbar.png" class="Crowbar" onclick="bang()">
