--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,12 @@
-
-  <h1>My Projects</h1>
-
-  <a href="#popup1">Encryption Algorithm</a> <br>
+<div class="moving">
+<h1 class="behind">M Y - P R O J E C T S</h1>
+<h1 class="radio">M Y - P R O J E C T S</h1>
+</div>
+<ul>
+   <li> <a href="#popup1">Encryption Algorithm <span class="des">An encryption algrorithm.</p></a> </li>
+  <li>  <a href="#popup2">[CANNOT LOAD NAME] <span class="des">[CANNOT LOAD TEXT]</p></a> </li> <br>
+  <li><a href="index.html"></i>GO BACK</a></li>
+</ul>
   
   <body onclick="pplay()">
     <script>
@@ -28,7 +33,7 @@
 </div>
 <a href="#popup1"></a>
   
-<a href="#popup2">[CANNOT LOAD NAME]</a> <br>
+
 	
 
 
@@ -114,4 +119,4 @@
 
 </style>
 
-<link rel="stylesheet" href="window.css" />
+<link rel="stylesheet" href="style.css" />
