--- a/socials.html
+++ b/socials.html
@@ -1,19 +1,21 @@
 <link href="css/all.css">
-<link rel="stylesheet" href="window.css">
+<link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
 <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
-
-<h1>Socials</h1>
-
+<div class="moving">
+   <h1 class="behind">M Y - S O C I A L S</h1> 
+   <h1 class="radio">M Y - S O C I A L S</h1>
+   </div>
 <ul>
 
   <title>Console</title>
-    <li><a href="https://youtube.com/@floatingbeans"><i class="fab fa-youtube"></i> YouTube</a></li>
-    <li><a href="https://github.com/floatingbeans"><i class="fab fa-github"></i> Github</a></li>
-    <li><a href="https://steamcommunity.com/profiles/76561199336961446/"><i class="fab fa-steam"></i> Steam</a></li>
-    <li><a href="https://www.xbox.com/en-IN/play/user/Beans6650"><i class="fab fa-xbox"></i> Xbox</a></li>
-    <li><a href="https://www.instagram.com/afloatingbean/"><i class="fab fa-instagram"></i> Instagram</a></li>
+    <li><i class="fab fa-youtube"></i><a href="https://youtube.com/@floatingbeans"> YouTube</a> <p class="des">My Youtube Channel.</p></li>
+    <li><i class="fab fa-github"></i><a href="https://github.com/floatingbeans"> Github</a> <p class="des">My Github Account</p></li>
+    <li><i class="fab fa-steam"></i><a href="https://steamcommunity.com/profiles/76561199336961446/"> Steam</a> <p class="des">My Steam Profile</p></li>
+    <li><i class="fab fa-xbox"></i><a href="https://www.xbox.com/en-IN/play/user/Beans6650"> Xbox</a> <p class="des">My Xbox Account</p></li>
+    <li><i class="fab fa-instagram"></i><a href="https://www.instagram.com/afloatingbean/">Instagram</a> <p class="des">My Instagram Account</p></li> <br>
+    <li><a href="index.html"></i>GO BACK</a></li>
     
 </ul><body onclick="pplay()">
     <script>
