--- a/socials.html
+++ b/socials.html
@@ -14,7 +14,7 @@
     <li><i class="fab fa-github"></i><a href="https://github.com/floatingbeans"> Github</a> <p class="des">My Github Account</p></li>
     <li><i class="fab fa-steam"></i><a href="https://steamcommunity.com/profiles/76561199336961446/"> Steam</a> <p class="des">My Steam Profile</p></li>
     <li><i class="fab fa-xbox"></i><a href="https://www.xbox.com/en-IN/play/user/Beans6650"> Xbox</a> <p class="des">My Xbox Account</p></li>
-    <li><i class="fab fa-instagram"></i><a href="https://www.instagram.com/afloatingbean/">Instagram</a> <p class="des">My Instagram Account</p></li> <br>
+    <li><i class="fab fa-instagram"></i><a href="https://www.instagram.com/beanbreather/">Instagram</a> <p class="des">My Instagram Account</p></li> <br>
     <li><a href="index.html"></i>GO BACK</a></li>
     
 </ul><body onclick="pplay()">
