--- a/socials.html
+++ b/socials.html
@@ -19,12 +19,13 @@
                 <h2>My Socials</h2>
            
                 <ul style="font-size: 175%; list-style: none;">
-                <li><a href=""><i class="fab fa-instagram" ></i> Instagram</a></li>
-                <li><a href=""><i class="fab fa-youtube"></i> Youtube</a></li>
-                <li><a href=""><i class="fab fa-steam"></i> Steam</a></li>
-                <li><a href=""><i class="fab fa-xbox" ></i> Xbox</a></li>
-                <li><a href=""><i class="fab fa-spotify"></i> Spotify</a></li>
-                <li><a href=""><i class="fab fa-github"></i> Github</a></li>
+                <li><a href="https://www.instagram.com/beanbreather/"><i class="fab fa-instagram" ></i> Instagram</a></li>
+                <li><a href="https://youtube.com/@floatingbeans"><i class="fab fa-youtube"></i> Youtube</a></li>
+                <li><a href="https://steamcommunity.com/profiles/76561199336961446/"><i class="fab fa-steam"></i> Steam</a></li>
+                <li><a href="https://www.xbox.com/en-IN/play/user/Beans6650"><i class="fab fa-xbox" ></i> Xbox</a></li>
+                <li><a href="https://open.spotify.com/user/31e2apn5juv3dwbw53day6w4hwtq"><i class="fab fa-spotify"></i> Spotify</a></li>
+                <li><a href="https://github.com/floatingbeans"><i class="fab fa-github"></i> Github</a></li>
+                
             </ul>
                 </ul>
             </div>
