--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <link href="style.css" rel="stylesheet">
+<title>FloatingBeans</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 <script src="bar.js"></script>
     <div class="win7">
         <div class="window active" style="min-width: 100%;">
@@ -19,6 +22,7 @@
                     <li>Programming</li>
                     <li>HATING ON UB##NTU</li>
                     <li>HALF LIFE HALF LIFE HALF LIFE HALF LIFE!!!!!</li>
+                    <li>Not make this page mobile-compatible.</li>
                 </ul>
             </div>
         </div>
