--- a/old/warn.html
+++ b/old/warn.html
@@ -1,5 +1,6 @@
 <h1>WARNING!</h1>
 <h2>This opens an old version of this website, replicating the Half Life 1 UI, and this verison isn't maintained by me anymore.</h2>
+<h3 class="red">DO NOT PROCEED IF YOU ARE ON MOBILE, THE WEBPAGE IS BROKEN ON MOBILE!</h3>
 <a href="index.html">I Understand, Proceed ></a> <br><br>
 <a href="../index.html">Go Back <</a>
 <link rel="stylesheet" href="backup.css">
