--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,7 @@
 <link href="style.css" rel="stylesheet">
+<title>Projects</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 <script src="bar.js"></script>
     <div class="win7">
         <div class="window active" style="min-width: 100%;">
