--- a/projects.html
+++ b/projects.html
@@ -1,27 +1,18 @@
 <link href="style.css" rel="stylesheet">
 <title>Projects</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
 <script src="bar.js"></script>
-    <div class="win7">
-        <div class="window active" style="min-width: 100%;">
-            <div class="title-bar">
-                <div class="title-bar-text">Website</div>
-                <div class="title-bar-controls">
-                    <button aria-label="Minimize"></button>
-                    <button aria-label="Maximize"></button>
-                    <button aria-label="Close"></button>
-                </div>
-            </div>
-            <div class="window-body has-space" style="min-height: 95%;" class="gay">
+
+           
+
+
                 <div id="bar"></div> 
-                <h2>Projects</h2>
-                <ul style="font-size: 175%; list-style: none;">
-                <li><a href="">No Projects Yet</a></li>
-                <li><a href="">Maybe one day i'll make something and add it here</a></li>
-            </ul>
+                <h1 style="font-size:300%;">Projects</h1>
+                <P style="font-size:175%;"><i>The result(s) of me having too much free time.</i></P>
+                <ul style="font-size: 175%; text-align: left; padding-left:25%;">
+                                <li><a href="">-> No projects (yet)</a></li>
+                                <li><a href="">-> I'm serious there's just nothing to showcase here.</a></li>
+                                <li><a href="">-> I have too much free time there's just nothing presentable.</a></li>
+                <li><a href=""></a></li>
+
                 </ul>
-            </div>
-        </div>
-    </div>
-</body>
