--- a/index.html
+++ b/index.html
@@ -1,30 +1,19 @@
 <link href="style.css" rel="stylesheet">
 <title>FloatingBeans</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<body onload="check()"></body>
 
 <script src="bar.js"></script>
-    <div class="win7">
-        <div class="window active" style="min-width: 100%;">
-            <div class="title-bar">
-                <div class="title-bar-text">Website</div>
-                <div class="title-bar-controls">
-                    <button aria-label="Minimize"></button>
-                    <button aria-label="Maximize"></button>
-                    <button aria-label="Close"></button>
-                </div>
-            </div>
-            <div class="window-body has-space" style="min-height: 95%;" class="gay">
+
+  
+            
                 <div id="bar"></div> 
-                <h2>Hey! I'm Beans.</h2>
-                <h4>Stuff I Do:</h4>
-                <ul style="font-size: 175%;">
-                 <li>Playing DOOM and Minecraft</li>
-                    <li>Programming</li>
-                    <li>HATING ON UB##NTU</li>
-                    <li>HALF LIFE HALF LIFE HALF LIFE HALF LIFE!!!!!</li>
-                    <li>Not make this page mobile-compatible.</li>
+                <h1 style="font-size:300%;">About Me</h1>
+                <P style="font-size:175%;"><i>Ignorance is bliss. (this may or may not be about mobile-compatability)</i></P>
+                <ul style="font-size: 175%; text-align: left; padding-left:25%;">
+                
+                <p>♂️ Male</p>
+                <p>🧑‍💻 <b>Programming Languages:</b> HTML(,CSS,JS), C++, </p>
+                <p>🎮 <b>Games:</b> HALF LIFE :3 :3 :3 :3 :3, GTA IV, Minecraft </p>
+                <p>🔞MINOR!!!!</p>
                 </ul>
-            </div>
-        </div>
-    </div>
-</body>
