--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <h1 class="red">-IN DEVELOPMENT-</h1>
 <h2 class="red">PLEASE COME BACK LATER.</h2>
 <div id="text"></div>
+
+<input type="range" min="0" max="100" disabled value="0" class="prog">
+<p>Dev Progress %</p>
 </center>
 
 <LINK rel="stylesheet" href="old/backup.css">
