--- a/projects.html
+++ b/projects.html
@@ -7,12 +7,14 @@
 
 
                 <div id="bar"></div> 
-                <h1 style="font-size:300%;">Projects</h1>
+                <div class="content">
+                <h1>Projects</h1>
                 <P style="font-size:175%;"><i>The result(s) of me having too much free time.</i></P>
                 <ul style="font-size: 175%; text-align: left; padding-left:25%;">
                                 <li><a href="">-> No projects (yet)</a></li>
                                 <li><a href="">-> I'm serious there's just nothing to showcase here.</a></li>
                                 <li><a href="">-> I have too much free time there's just nothing presentable.</a></li>
                 <li><a href=""></a></li>
-
+                
                 </ul>
+                </div>
