--- a/socials.html
+++ b/socials.html
@@ -12,7 +12,8 @@
                 
             </ul>
                 <div id="bar"></div> 
-                <h1 style="font-size:300%;">Socials</h1>
+                <div class="content">
+                <h1>Socials</h1>
                 <P style="font-size:175%;"><i>I'm blocking you if i don't instantly recognise you.</i></P>
                 <ul style="font-size: 200%; text-align: left; padding-left:25%;">
                 
@@ -24,3 +25,4 @@
                 <li><a href="https://github.com/floatingbeans"><i class="fab fa-github"></i> Github</a></li>
                 </ul>
 
+</div>
