--- a/index.html
+++ b/index.html
@@ -3,13 +3,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <body onload="check()"></body>
 <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
+<script src="global.js"></script>
 <script src="bar.js"></script>
-<head>
-<script src="https://unpkg.com/twemoji@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
-</head>
-<script>
-twemoji.parse(document.body);
-</script>
+<div id="scrpthld">
   
             
                 <div id="bar"></div> 
@@ -24,3 +20,8 @@ twemoji.parse(document.body);
 <p>🎮 [insert half life mention]</p>
                 </ul>
                 </div>
+
+
+<script>
+    
+</script>
