MISC IS NOT WIP ANYMORE
owo

--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,8 @@
 <link href="style.css" rel="stylesheet">
 <title>Projects</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="viewport" content="width=1024">
 <script src="bar.js"></script>
-
+<link rel="icon" type="image/x-icon" href="channels4_profile.jpg">
            
 
 
