--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <link href="style.css" rel="stylesheet">
-<title>FloatingBeans</title>
+<title>About</title>
 <meta name="viewport" content="width=1024"><body onload="check()"></body>
 <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
 <script src="global.js"></script>
@@ -10,14 +10,17 @@
             
                 <div id="bar"></div> 
                 <div class="content">
-                <h1>about me</h1>
-                <P style="font-size:175%;"><i>miniscule parts of my identity that don't make me paranoid by sharing them.</i></P>
+                <h1>about the site/misc</h1>
+                <P style="font-size:175%;"><i>general information about the site</i></P>
                 <ul style="font-size: 175%; text-align: left; padding-left:25%;">
                 
-<p>♂️ male</p>
-<p>💻 c++, node, html, css, js</p>
-<p>🔞 minor</p>
-<p>🎮 [insert half life mention]</p>
+<p>this is a pretty uninteresting site i made,<br> it's coded in pure html css and js. no ai was used for it</p>
+<h2>updates worth mentioning</h2>
+<p>26.6.2025, 23:30 (IST): mobile compatability!</p>
+<h2>time capsules:</h2>
+<button onclick="win('testing.html')">classic homepage</button>
+<button onclick="win('old/index.html')">Half Life era</button>
+
                 </ul>
                 </div>
 
