--- a/socials.html
+++ b/socials.html
@@ -1,12 +1,11 @@
 <link href="style.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="viewport" content="width=1024">
 <title>Socials</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 <script src="bar.js"></script>
-
+<link rel="icon" type="image/x-icon" href="channels4_profile.jpg">
             
 
                 
