--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
 <h2>time capsules:</h2>
 <button onclick="win('testing.html')">classic homepage</button>
 <button onclick="win('old/index.html')">Half Life era</button>
+<button onclick="win('docs.html')">Hosted Docs</button>
 
                 </ul>
                 </div>
