--- a/robert.html
+++ b/robert.html
@@ -3,7 +3,7 @@
 <h2><i>By Alex Rose | arose@delcotimes.com | The Delaware County Daily Times
 PUBLISHED: January 27, 2025 at 7:13 AM EST</i></h2>
 <img src="robert.webp" alt="Robert M. Swanson" width="300" height="300">
-
+<button onclick="window.location.assign(`brick.html`)">Horsecock</button>
 <p style=" padding-left: 5%;">Robert M. Swanson, 26, of the first block of Strawberry Lane, was also charged with 50 counts of criminal use of a communication facility after investigators with the Internet Crimes Against Children task force reviewed files on his electronic devices.
 According to an affidavit of probable cause for his arrest written by County Detective Lisa DeMartini:
 The National Center for Missing and Exploited Children received a report from an anonymous caller purporting to be a 14-year-old girl that they had received an unsolicited picture from a man of his penis.
