--- a/brick.html
+++ b/brick.html
@@ -1,5 +1,4 @@
-<a href="brickadia/">Documents</a>
-<a href="robert.html">Robert</a>
+<a href="https://github.com/floatingbeans/floatingbeans.github.io/tree/main/brickadia">Documents</a>
 <style>
     body {
         font-size: 2000%;
