--- a/docs.html
+++ b/docs.html
@@ -1,7 +1,6 @@
-<a href="brick.html">Brickadia</a>
-<a href="robert.html">Robert</a>
-<style>
-    body {
-        font-size: 2000%;
+<h1>THIS WEBSITE NO LONGER HOSTS THE ARCHIVE</h1>
+<script>
+    window.onload = function() {
+        window.location.assign("https://floatingbeans.github.io/docs/");
     }
-</style>
+</script>
