--- a/projects.html
+++ b/projects.html
@@ -11,9 +11,9 @@
                 <h1>Projects</h1>
                 <P style="font-size:175%;"><i>The result(s) of me having too much free time.</i></P>
                 <ul style="font-size: 175%; text-align: left; padding-left:25%;">
-                                <li><a href="">-> No projects (yet)</a></li>
-                                <li><a href="">-> I'm serious there's just nothing to showcase here.</a></li>
-                                <li><a href="">-> I have too much free time there's just nothing presentable.</a></li>
+                                <li><a href="https://floatingbeans.github.io/docs/">-> FloatingBeans' Document Archive</a></li>
+                        <li><a href="https://github.com/floatingbeans/ToxicWaste-AFTERMATH">-> Doom 2: Toxic Waste (made in collaboration with </a><span><a href="https://tormater.com">Tormater Team</a>)</span></li>
+
                 <li><a href=""></a></li>
                 
                 </ul>
