--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script>
         function timecalc() {
   
-        const then = new Date(Date.UTC(2025, 5, 20, 13, 30, 0,0))
+        const then = new Date(Date.UTC(2025, 9, 28))
         const now = new Date();
         console.log(now)
         console.log(then)
