--- a/about.html
+++ b/about.html
@@ -14,9 +14,9 @@
                 <P style="font-size:175%;"><i>general information about the site</i></P>
                 <ul style="font-size: 175%; text-align: left; padding-left:25%;">
                 
-<p>this is a pretty uninteresting site i made,<br> it's coded in pure html css and js. no ai was used for it</p>
-<h2>updates worth mentioning</h2>
-<p>26.6.2025, 23:30 (IST): mobile compatability!</p>
+
+<h2>update changelog:</h2>
+<p>changed style</p>
 <h2>time capsules:</h2>
 <button onclick="win('testing.html')">classic homepage</button>
 <button onclick="win('old/index.html')">Half Life era</button>
