--- a/socials.html
+++ b/socials.html
@@ -13,7 +13,7 @@
                 <div id="bar"></div> 
                 <div class="content">
                 <h1>Socials</h1>
-                <P style="font-size:175%;"><i>I'm blocking you if i don't instantly recognise you.</i></P>
+                <P style="font-size:175%;"><i>my socials,conveniently arranged in a list</i></P>
                 <ul style="font-size: 200%; text-align: left; padding-left:25%;">
                 
                                 <li><a href="https://www.instagram.com/beanbreather/"><i class="fab fa-instagram" ></i> Instagram</a></li>
