--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
                 <div id="bar"></div> 
                 <div class="content">
                 <h1>Projects</h1>
-                <P style="font-size:175%;"><i>The result(s) of me having too much free time.</i></P>
+                <P style="font-size:175%;"><i>serious projects, for other projects visit <a href="https://floatingbeans.github.io/funpage/">https://floatingbeans.github.io/funpage/</a></i></P>
                 <ul style="font-size: 175%; text-align: left; padding-left:25%;">
                                 <li><a href="https://floatingbeans.github.io/docs/">-> FloatingBeans' Document Archive</a></li>
                         <li><a href="https://github.com/floatingbeans/ToxicWaste-AFTERMATH">-> Doom 2: Toxic Waste (made in collaboration with </a><span><a href="https://tormater.com">Tormater Team</a>)</span></li>
