--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <P style="font-size:175%;"><i>my socials,conveniently arranged in a list</i></P>
                 <ul style="font-size: 200%; text-align: left; padding-left:25%;">
                 
-                                <li><a href="https://www.instagram.com/beanbreather/"><i class="fab fa-instagram" ></i> Instagram</a></li>
+                                <li><a href="https://www.instagram.com/gordonbeanmanowo/"><i class="fab fa-instagram" ></i> Instagram</a></li>
                 <li><a href="https://youtube.com/@floatingbeans"><i class="fab fa-youtube"></i> Youtube</a></li>
                 <li><a href="https://steamcommunity.com/profiles/76561199336961446/"><i class="fab fa-steam"></i> Steam</a></li>
                 <li><a href="https://www.xbox.com/en-IN/play/user/Beans6650"><i class="fab fa-xbox" ></i> Xbox</a></li>
