--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
 
 <head><link rel="icon" type="image/x-icon" href="Radiation_Hazard.ico"></head>
+<div class="scontent scroll-snap-wrapper">
 
                 <div class="content">
                 <h1>floatingbeans</h1>
@@ -30,7 +31,7 @@
 <p>🎮 Games: Half Life, Counter Strike 2.0, POSTAL 2, Minecraft, DOOM</p>
                 </ul>
          
-<br></br>
+<br></br></div>
 <div class="content">
                 <h2>Socials</h2>
                 <P style="font-size:175%;"><i>my socials,conveniently arranged in a list</i></P>
@@ -73,3 +74,4 @@
 
                 </ul>
                 </div>
+                </div> 
