--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<div class="bg-noise"></div>
+
 <div class="grid-container">
 	<div class="plane">
 		<div class="grid"></div>
@@ -18,6 +18,8 @@
 <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
 
 <head><link rel="icon" type="image/x-icon" href="Radiation_Hazard.ico"></head>
+  <main class="crt">
+    <div class="wrapper">
 <div class="scontent scroll-snap-wrapper">
 
                 <div class="content">
@@ -75,3 +77,5 @@
                 </ul>
                 </div>
                 </div> 
+                </div>
+  </main>
