--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <p>removed navbar, single page layout, debloated files</p>
 <h3>time capsules:</h3>
 <button onclick="window.location.assign('testing.html')">classic homepage</button>
-<button onclick="window.location.assign('old/index.html')">Half Life era</button>
+<button onclick="window.location.assign('old/warn.html')">Half Life era</button>
 <button onclick="window.location.assign('docs.html')">Hosted Docs</button>
 
                 </ul>
