--- a/old/warn.html
+++ b/old/warn.html
@@ -1,6 +1,12 @@
 <h1>WARNING!</h1>
-<h2>This opens an old version of this website, replicating the Half Life 1 UI, and this verison isn't maintained by me anymore.</h2>
-<h3 class="red">DO NOT PROCEED IF YOU ARE ON MOBILE, THE WEBPAGE IS BROKEN ON MOBILE!</h3>
+<h2>This is an archive of the site which is no longer maintained, please expect:</h2>
+<ul>
+    <li>broken links</li>
+    <li>unmaintained project page</li>
+    <li>reworked/removed functionalities</li>
+    <li>extremely broken mobile layout</li>
+</ul>
+<p>PS: this only exists because it took a lot of effort to replicate the half life 1 UI, if you want to copy it, please credit me.</p>
 <a href="index.html">I Understand, Proceed ></a> <br><br>
-<a href="../index.html">Go Back <</a>
+<a href="../index.html">Go Back </a>
 <link rel="stylesheet" href="backup.css">
