--- a/index.html
+++ b/index.html
@@ -17,18 +17,8 @@
 
 <body onload="check()">
 
-    <div class="grid-container">
-        <div class="plane">
-            <div class="grid"></div>
-            <div class="glow"></div>
-        </div>
-        <div class="plane">
-            <div class="grid"></div>
-            <div class="glow"></div>
-        </div>
-    </div>
 
-    <div class="scontent scroll-snap-wrapper">
+    <div class="scroll-snap-wrapper">
 
         <div class="content">
             <h1>floatingbeans</h1>
