--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
             <h2>about me</h2>
             <p style="font-size:175%;"><i>who i am</i></p>
             <ul>
-                <li>🖥️ Languages: Node.JS, C++, CSS, JS</li>
-                <li>🎮 Games: Half Life, Counter Strike 2.0, POSTAL 2, Minecraft, DOOM</li>
+                <li>🐧 current os: ubuntu</li>
+                <li>🥁 instrument: drum kit</li>
+                <li>🖥️ Languages: JS, CSS, C++, Bash, </li>
+                <li>🎮 Games: Half Life, POSTAL 2, Minecraft, DOOM, Geometry Dash</li>
             </ul>
         </div>
 
@@ -57,7 +59,7 @@
             <p style="font-size:175%;"><i>general information about the site</i></p>
             
             <h3>update changelog:</h3>
-            <p>removed navbar, single page layout, debloated files</p>
+            <p>css overhaul, multiple layout changes, many improvements, proper html formatting, readabale code, lighter css</p>
             
             <h3>time capsules:</h3>
             <button onclick="window.location.assign('testing.html')">classic homepage</button>
