--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
+
+<meta content="FloatingBeans" property="og:title" />
+<meta content="personal website" property="og:description" />
+<meta content="https://floatingbeans.github.io" property="og:url" />
+<meta content="music-icon.png" property="og:image" />
+<meta content="#00eaff" data-react-helmet="true" name="theme-color" />
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1024">
     <title>FloatingBeans</title>
